# whereshallwe

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: test.yml
app/: config.py  db.py  main.py  themes.py
app/middleware/: cors.py  domain.py  rate_limit.py
app/models/: domain.py  venue.py
app/routers/: api.py  health.py  pages.py
app/templates/: 404.html  500.html
app/themes/wswd/: base.html  home.html  map.html  venue.html  venues.html
app/themes/wsws/: base.html  home.html  map.html  venue.html  venues.html
migrations/: 001_domains.sql  002_wswd_schema.sql  003_wsws_schema.sql  004_seed_wswd.sql  005_seed_wsws.sql  006_seed_wsws_stats.sql
scripts/: generate_wswd_seed.py  generate_wsws_seed.py  setup_db_role.sql  wsws_geocode_cache.json
static/shared/: reset.css
tests/: test_domain_middleware.py  test_theme_loader.py  test_venues_api.py
